Add translation to API result type
